--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,10 @@ jobs:
       - name: 🧪 Test (build samples)
         run: dotnet build -p:YoloDevSdkVersion=${{ steps.version.outputs.version }}
         working-directory: sample
+
+      - name: 💾 Upload artifacts
+        if: success() && matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v2
+        with:
+          name: yolo-dev-sdk
+          path: artifacts
