--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -58,7 +58,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     if: fromJSON(needs.release_please.outputs.any_released) && github.repository == 'YoloDev/YoloDev.Sdk'
     needs:
       - release_please
