--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,1 +1,7 @@
-<Project />
+<Project>
+
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.9.5" />
+  </ItemGroup>
+
+</Project>
